test/spec_vectors/type-rec/ok/module_20.wat
(module (rec (type $s (struct))) (rec (type $t (func (param (ref $s))))) (func $f (param (ref $s))) (global (ref $t) (ref.func $f)))