test/spec_vectors/type-rec/fail/module_21.wat
(module (rec (type $s (struct)) (type $t (func (param (ref $s))))) (func $f (param (ref $s))) (global (ref $t) (ref.func $f)))